--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     border-color: black;
     border-style: solid;
     border-width: 1px;
-    border-color: black solid 1px; /* shorthand */
+    border-color: rgb(37, 7, 7) solid 1px; /* shorthand */
     width: 100px;
     height: 100px;
     text-align: center;
@@ -12,6 +12,13 @@
 .parent-box{
     display: flex;
     background-color: lightblue;
-    padding: 20px;
+    padding: 40px 20px 20px 20px; /* shorthand para: padding-top, padding-right, padding-bottom, padding-Left */
 
+}
+.parent-box > p{
+    position: absolute;
+    margin-top: -30px;
+}
+.child-box{
+    background-color: rgb(142, 182, 182);
 }
