--- a/style.css
+++ b/style.css
@@ -1,24 +1,43 @@
-.child-box{
 
-    border-color: black;
+.parent-box { /* caixa pai */
+    display: flex;
+    background-color:burlywood;
+    padding: 40px 20px 20px 20px /*shorthand para padding-top,padding-rigth,padding-bottom, padding-left*/
+}
+
+.child-box{  /* caixa filho */
+    /*border-color: black;
     border-style: solid;
-    border-width: 1px;
-    border-color: rgb(37, 7, 7) solid 1px; /* shorthand */
+    border-width: 2px;*/
+    border: #000 solid 1px;/*shorthand*/
     width: 100px;
     height: 100px;
     text-align: center;
+    border-radius: 15px;   
 }
 
-.parent-box{
-    display: flex;
-    background-color: lightblue;
-    padding: 40px 20px 20px 20px; /* shorthand para: padding-top, padding-right, padding-bottom, padding-Left */
-
+.parent-box div:nth-of-type(1){
+    background-color: rgb(216, 119, 195);
 }
-.parent-box > p{
+
+.parent-box div:nth-of-type(2){
+    background-color: rgb(233, 53, 209);
+}
+
+.parent-box div:nth-of-type(3){
+    background-color: rgb(129, 9, 113);
+}
+
+.parent-box > p {
+
     position: absolute;
     margin-top: -30px;
+
 }
-.child-box{
-    background-color: rgb(142, 182, 182);
+#justify-content .parent-box{
+    justify-content: center;
+
+}
+#jc-space-around .parent-box{
+    justify-content: space-around;
 }
